--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css" id="main-styles-link">
      <style>
       .responsive-container-block {
-        background-color: black;
+        /* background-color: black; */
         /* font-family: Nunito, sans-serif; */
   min-height: 75px;
   height: fit-content;
@@ -625,7 +625,7 @@ a {
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <a class="rd-navbar-brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
+                  <a class="rd-navbar-brand" href="index.html"><img src="images/log.png" alt="" width="151" height="44" srcset="images/log.png 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -634,15 +634,15 @@ a {
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                          <li><a class="link-default" style="color: black;" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                          <li><a class="link-default"  href="tel:+91 9906531735"> +91 9906531735</a></li>
+                          <li><a class="link-default"  href="tel:+91 7051203505">+91 7051203505 </a></li>
                       </ul>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      <div class="unit-body"><a class="link-default"  href="tel:#">Den Lane <br> Rajbagh, Srinagar
                       </a></div>
                     </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
                   </div>
@@ -673,7 +673,7 @@ a {
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(/images/hero1.png);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(/images/herobg3.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -731,7 +731,7 @@ a {
       </div> -->
       
       <!-- Advantages and Achievements-->
-      <section class="section novi-background section-md text-center bg-gray-100" style="background-color: black;">
+      <section class="section novi-background section-md text-center ">
         <div class="container">
           <h3 class="text-uppercase wow-outer"><span class="wow slideInUp">Why people Choose Us</span></h3>
           <p class="wow-outer"><span class="text-width-1 wow slideInDown">What sets our agency apart is our commitment to delivering results-driven campaigns tailored to meet the unique goals and visions of each and every client. We 🌟
@@ -781,7 +781,7 @@ a {
           </div>
         </div>
       </section>
-      <section class="section novi-background section-lg text-center" style="background-image: url(images/hero1.png);">
+      <section class="section novi-background section-lg text-center">
         <div class="container">
           <h3 class="text-uppercase wow-outer"><span class="wow slideInUp">Our Team</span></h3>
           <div class="row row-50 row-xxl-70 justify-content-center justify-content-lg-start">
@@ -851,7 +851,7 @@ a {
           </div>
         </div>
       </section>
-      <section class="section novi-background section-lg bg-gray-100" style="background-color: black;">
+      <section class="section novi-background section-lg">
         <div class="container">
           <div class="row row-30">
             <div class="col-sm-6 col-lg-4 wow-outer">
@@ -892,7 +892,7 @@ a {
       </section> 
       <!-- Page Footer-->
       
-            <footer class="section novi-background footer-advanced bg-gray-700" >
+            <footer class="section novi-background footer-advanced " >
               <div class="footer-advanced-main">
                 <div class="container">
                   <div class="row row-50">
@@ -984,7 +984,7 @@ a {
               </div>
               <div class="footer-advanced-aside">
                 <div class="container">
-                  <div class="footer-advanced-layout" ><a class="brand" href="index.html"><img style="border-radius: 14px;"  src="images/shadow.png" alt="" width="115" height="34" style="border-radius: 50px;" srcset="images/whiteshadow.jpg 2x"/></a>
+                  <div class="footer-advanced-layout" ><a class="brand" href="index.html"><img style="border-radius: 14px;"  src="images/log.png" alt="" width="115" height="34" style="border-radius: 50px;" srcset="images/log.png 2x"/></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
                       By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
