--- a/our-team.html
+++ b/our-team.html
@@ -319,7 +319,7 @@
   <body>
    
     <div class="preloader">
-      <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/>
+      <div class="preloader-logo"><img src="images/log.png" alt="" width="151" height="44" srcset="images/log.png 2x"/>
       </div>
       <div class="preloader-body">
         <div id="loadingProgressG">
@@ -339,7 +339,7 @@
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="/"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="/"><img src="images/log.png" alt="" width="151" height="44" srcset="images/log.png 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -348,22 +348,22 @@
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                          <li><a class="link-default" style="color: black;" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                          <li><a class="link-default"  href="tel:+91 9906531735"> +91 9906531735</a></li>
+                          <li><a class="link-default"  href="tel:+91 7051203505">+91 7051203505 </a></li>
                       </ul>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      <div class="unit-body"><a class="link-default" href="tel:#">Den Lane<br> Rajbagh, Srinagar
                       </a></div>
                     </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="rd-navbar-main-outer" style="background-color: black;">
+            <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
                 <div class="rd-navbar-nav-wrap" id="rd-navbar-nav-wrap-1">
                   <!-- RD Navbar Nav-->
@@ -387,7 +387,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/hero1.png);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/herobg3.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -402,7 +402,7 @@
         </div>
       </section>
       <section>
-        <section class="team-page-section" style="background-color: black;">
+        <section class="team-page-section" >
             <div class="container">
                 <!-- Sec Title -->
                 <div class="sec-title centered">
@@ -585,7 +585,7 @@
       
       <!-- Page Footer-->
       
-            <footer class="section novi-background footer-advanced bg-gray-700">
+            <footer class="section novi-background footer-advanced ">
               <div class="footer-advanced-main">
                 <div class="container">
                   <div class="row row-50">
@@ -677,7 +677,7 @@
               </div>
               <div class="footer-advanced-aside">
                 <div class="container" >
-                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/shadow.png" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
+                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="images/log.png" alt="" width="115" height="34" srcset="images/log.png 2x" /></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
                       By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
