--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/log.png" alt="" width="151" height="44" srcset="images/log.png 2x"/></a>
                 </div>
                 <div class="rd-navbar-collapse" >
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -46,14 +46,14 @@
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                          <li><a class="link-default" style="color: black;"  href="tel:+91 7051203505">+91 7051203505 </a></li>
+                          <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                          <li><a class="link-default"   href="tel:+91 7051203505">+91 7051203505 </a></li>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      <div class="unit-body"><a class="link-default"  href="tel:#">Den Lane <br> Rajbagh, Srinagar
                       </a></div>
                       <!-- <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div> -->
                       <!-- <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div> -->
@@ -86,7 +86,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/hero1.png);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/herobg3.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -100,7 +100,7 @@
           </div>
         </div>
       </section>
-      <section class="section novi-background section-sm" style="background-color: black;">
+      <section class="section novi-background section-sm">
         <div class="container">
           <div class="layout-bordered">
             <div class="layout-bordered-item wow-outer">
@@ -128,7 +128,7 @@
           </div>
         </div>
       </section>
-      <section class="section novi-background bg-gray-100" style="background-color: black;">
+      <section class="section novi-background bg-gray-100">
         <div class="range justify-content-xl-between">
           <div class="cell-xl-6 align-self-center container">
             <div class="row">
@@ -203,7 +203,7 @@
       </section>
       <!-- Page Footer-->
       <!-- <a class="banner" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_big_02.jpg" alt=""/></a> -->
-            <footer class="section novi-background footer-advanced bg-gray-700">
+            <footer class="section novi-background footer-advanced ">
               <div class="footer-advanced-main">
                 <div class="container">
                   <div class="row row-50">
@@ -296,7 +296,7 @@
               <div class="footer-advanced-aside">
                 <div class="container">
                   <div class="footer-advanced-layout"><a class="brand" href="index.html">
-                    <img src="images/shadow.png" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
+                    <img src="images/log.png" alt="" width="115" height="34" srcset="images/log.png 2x" /></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
                       By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
