Commented out preloader sections in multiple HTML files and adjusted JavaScript to skip preloader handling, addressing rendering issues.

--- a/about-us.html
+++ b/about-us.html
@@ -602,7 +602,7 @@ a {
   </head>
   <body>
    
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/>
       </div>
       <div class="preloader-body">
@@ -610,7 +610,7 @@ a {
           <div class="loadingProgressG" id="loadingProgressG_1"></div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="page">
       <!-- Page Header-->
      
