--- a/our-services.html
+++ b/our-services.html
@@ -198,7 +198,7 @@ background: linear-gradient(to bottom, #434343, #000000);
   </head>
   <body>
    
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/>
       </div>
       <div class="preloader-body">
@@ -206,7 +206,7 @@ background: linear-gradient(to bottom, #434343, #000000);
           <div class="loadingProgressG" id="loadingProgressG_1"></div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="page">
       
       <header class="section novi-background page-header">
