--- a/our-team.html
+++ b/our-team.html
@@ -318,7 +318,7 @@
   </head>
   <body>
    
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="preloader-logo"><img src="images/log.png" alt="" width="151" height="44" srcset="images/log.png 2x"/>
       </div>
       <div class="preloader-body">
@@ -326,7 +326,7 @@
           <div class="loadingProgressG" id="loadingProgressG_1"></div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="page">
       
       <header class="section novi-background page-header">
